--- a/index.html
+++ b/index.html
@@ -4,16 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="application-name" content="MC Box">
-  <meta name="apple-mobile-web-app-title" content="MC Box">
-  <meta name="msapplication-starturl" content="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>MC Box</title>
-
-  <link rel="manifest" href="public/manifest.json">
+  <title>React Demo</title>
 </head>
 
 <body>
